# code_chat_eval

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/: evaluation_data.parquet  validation_data.parquet
evaluation_results/: codellama-codellama-34b-instruct-hf-5-vs-gpt-4o-2024-08-06-2024-09-30-parquet  gemini-1-5-flash-5-vs-gpt-4o-2024-08-06-2024-09-30-parquet  gpt-4o-mini-5-vs-gpt-4o-2024-08-06-2024-09-30-parquet  meta-llama-meta-llama-3-1-8b-instruct-turbo-5-vs-gpt-4o-2024-08-06-2024-09-30-parquet
examples/: incomplete-answer.txt  incomplete-evaluation.txt  misunderstood-evaluation.txt  misunderstood-question.txt  one-step-conversation.txt  wrong-language.txt
src/mt_chat_code_eval/: conversation.py  evaluation.py  gemini.py  llm_abstract.py  llm_fabric.py  open_ai.py  prompts.py  run_data_download.py  run_evaluation.py  run_validation.py
src/mt_chat_code_eval/prompt_files/: evaluation.end.prompt  evaluation.qa.prompt  evaluation.start.prompt
validation_results/: gemini-1.5-flash___2024-09-29.parquet  gemini-1.5-pro___2024-09-29.parquet  gpt-4o-2024-08-06___2024-09-29.parquet  gpt-4o-mini___2024-09-29.parquet  gpt-4o___2024-09-29.parquet
